--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <table>
   <tr>
     <td>
-      <img src="https://raw.githubusercontent.com/idayub/laurence-email-assets/refs/heads/main/img/Logo.png" alt="" width="90">
+      <img src="https://github.com/idayub/laurence-email-assets/blob/main/img/a02c9a28-a3e8-43c1-a15a-30ee9748e772.jpg?raw=true" alt="" width="90">
     </td>
     <td width="24">
 
