--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </tr>
         <tr>
           <td>
-            <span style="font-family:Arial;font-size:12px;color:#888888">Founder</span><span style="color:#8B4811;"> • </span><span style="font-family:Arial;font-size:12px;color:#888888">Designer & Gemologist</span>
+            <span style="font-family:Arial;font-size:12px;color:#888888">Founder</span><span style="color:#8B4811;"> - </span><span style="font-family:Arial;font-size:12px;color:#888888">Designer & Gemologist</span>
           </td>
 
         </tr>
