--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   </a>
                 </td>
                 <td style="padding-right:10px;">
-                  <a href="https://www.facebook.com/lvfinejewelry/">
+                  <a href="https://www.facebook.com/share/1GhQ2tM2eM/?mibextid=wwXIfr">
                     <img src="https://github.com/idayub/laurence-email-assets/blob/main/img/icon-facebook.png?raw=true" alt="" width="24">
                   </a>
                 </td>
